# m3a

./: .gitignore  README.md  run_agent_gui.py
OmniParser/: test_env.py
OmniParser/util/: utils.py
agent/: __init__.py  core.py  executor.py  gui.py  llm.py  models.py  omniparser.py  prompts.py  run.py
pydesktop/: README.md  __init__.py  common.py  demo.py  keyboard.py  mouse.py  pyproject.toml  screen.py
server/: __init__.py  api.py  omniparser_service.py  run.py
